--- a/imgui-frontend/CMakeLists.txt
+++ b/imgui-frontend/CMakeLists.txt
@@ -18,7 +18,7 @@ set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
 set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
 
 add_subdirectory(${PROJECT_SOURCE_DIR}/lumi)
-add_subdirectory(${PROJECT_SOURCE_DIR}/external/glew)
+add_subdirectory(${PROJECT_SOURCE_DIR}/external/glew-cmake)
 add_subdirectory(${PROJECT_SOURCE_DIR}/external/glfw)
 add_subdirectory(${PROJECT_SOURCE_DIR}/external/curl)
 
@@ -29,7 +29,7 @@ target_include_directories(Lumi_FE PRIVATE
 )
 
 target_include_directories(Lumi_FE PUBLIC
-    ${PROJECT_SOURCE_DIR}/external/glew/include
+    ${PROJECT_SOURCE_DIR}/external/glew-cmake/include
     ${PROJECT_SOURCE_DIR}/external/glfw/include
     ${PROJECT_SOURCE_DIR}/external/curl/include
 )
