--- a/frontend/Lumi/package.json
+++ b/frontend/Lumi/package.json
@@ -11,9 +11,12 @@
     "windows": "react-native run-windows"
   },
   "dependencies": {
+    "axios": "^1.5.1",
     "react": "18.2.0",
     "react-native": "0.72.5",
-    "react-native-windows": "0.72.11"
+    "react-native-vector-icons": "^10.0.0",
+    "react-native-windows": "0.72.11",
+    "stream": "^0.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -23,15 +26,16 @@
     "@react-native/metro-config": "^0.72.11",
     "@tsconfig/react-native": "^3.0.0",
     "@types/react": "^18.0.24",
+    "@types/react-native-vector-icons": "^6.4.16",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
+    "metro-config": "^0.76.8",
     "metro-react-native-babel-preset": "0.76.8",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
-    "typescript": "4.8.4",
-    "metro-config": "^0.76.8"
+    "typescript": "4.8.4"
   },
   "engines": {
     "node": ">=16"
