--- a/frontend/Lumi/.vscode/settings.json
+++ b/frontend/Lumi/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "java.project.sourcePaths": [
         "windows/Lumi/Assets/Fonts"
-    ]
+    ],
+    "java.compile.nullAnalysis.mode": "automatic"
 }
