--- a/frontend/Lumi/package.json
+++ b/frontend/Lumi/package.json
@@ -11,9 +11,11 @@
     "windows": "react-native run-windows"
   },
   "dependencies": {
+    "@react-native-community/voice": "^1.1.9",
     "axios": "^1.5.1",
     "react": "18.2.0",
-    "react-native": "0.72.5",
+    "react-native": "0.72.6",
+    "react-native-svg": "^13.14.0",
     "react-native-vector-icons": "^10.0.0",
     "react-native-windows": "0.72.11",
     "stream": "^0.0.2"
