--- a/frontend/Lumi/package.json
+++ b/frontend/Lumi/package.json
@@ -15,6 +15,10 @@
     "axios": "^1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-event-source": "^1.1.0",
+    "react-native-fetch-api": "^3.0.0",
+    "react-native-polyfill-globals": "^3.1.0",
+    "react-native-sse": "^1.2.0",
     "react-native-svg": "^13.14.0",
     "react-native-windows": "0.72.18",
     "stream": "^0.0.2"
