--- a/frontend/Lumi/tsconfig.json
+++ b/frontend/Lumi/tsconfig.json
@@ -1,9 +1,3 @@
 {
-  "extends": "@tsconfig/react-native/tsconfig.json",
-  "compilerOptions": {
-    "typeRoots": [
-      "../node_modules/@types",
-      "../@types"
-    ]
-  }
+  "extends": "@tsconfig/react-native/tsconfig.json"
 }
