--- a/frontend/Lumi/package.json
+++ b/frontend/Lumi/package.json
@@ -15,8 +15,10 @@
     "axios": "^1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-polyfill-globals": "^3.1.0",
     "react-native-svg": "^13.14.0",
     "react-native-windows": "0.72.18",
+    "socket.io-client": "^4.7.2",
     "stream": "^0.0.2"
   },
   "devDependencies": {
@@ -33,8 +35,10 @@
     "jest": "^29.2.1",
     "metro-config": "^0.76.8",
     "metro-react-native-babel-preset": "0.76.8",
+    "patch-package": "^8.0.0",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
+    "reactotron-react-native": "^5.0.3",
     "typescript": "4.8.4"
   },
   "engines": {
