--- a/frontend/Lumi/package.json
+++ b/frontend/Lumi/package.json
@@ -12,10 +12,14 @@
   },
   "dependencies": {
     "@react-native-community/voice": "^1.1.9",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
     "axios": "^1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-polyfill-globals": "^3.1.0",
+    "react-native-safe-area-context": "^4.7.4",
+    "react-native-screens": "^3.27.0",
     "react-native-svg": "^13.14.0",
     "react-native-windows": "0.72.18",
     "socket.io-client": "^4.7.2",
