--- a/frontend/Lumi/package.json
+++ b/frontend/Lumi/package.json
@@ -17,13 +17,17 @@
     "axios": "^1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-gesture-handler": "^2.13.4",
     "react-native-polyfill-globals": "^3.1.0",
+    "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
     "react-native-svg": "^13.14.0",
-    "react-native-windows": "0.72.18",
+    "react-native-windows": "^0.72.18",
+    "react-navigation": "^5.0.0",
     "socket.io-client": "^4.7.2",
-    "stream": "^0.0.2"
+    "stream": "^0.0.2",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
