--- a/frontend/Lumi/windows/ExperimentalFeatures.props
+++ b/frontend/Lumi/windows/ExperimentalFeatures.props
@@ -34,6 +34,10 @@
     <UseExperimentalNuget>false</UseExperimentalNuget>
 
     <ReactExperimentalFeaturesSet>true</ReactExperimentalFeaturesSet>
+    
+    <WindowsTargetPlatformVersion>10.0.19041.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformMinVersion>10.0.19041.0</WindowsTargetPlatformMinVersion>
+    <TargetPlatformMinVersion>10.0.19041.0</TargetPlatformMinVersion>
   
   </PropertyGroup>
 
