--- a/frontend/Lumi/package.json
+++ b/frontend/Lumi/package.json
@@ -23,6 +23,7 @@
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
     "react-native-svg": "^13.14.0",
+    "react-native-tts": "^4.1.0",
     "react-native-windows": "^0.72.18",
     "react-navigation": "^5.0.0",
     "socket.io-client": "^4.7.2",
