--- a/frontend/Lumi/windows/Lumi/AutolinkedNativeModules.g.targets
+++ b/frontend/Lumi/windows/Lumi/AutolinkedNativeModules.g.targets
@@ -10,5 +10,9 @@
     <ProjectReference Include="$(ProjectDir)..\..\node_modules\react-native-svg\windows\RNSVG\RNSVG.vcxproj">
       <Project>{7acf84ec-efba-4043-8e14-40b159508902}</Project>
     </ProjectReference>
+    <!-- Projects from react-native-tts -->
+    <ProjectReference Include="$(ProjectDir)..\..\node_modules\react-native-tts\windows\RNTTS\RNTTS.vcxproj">
+      <Project>{B250B404-D1A2-4171-851E-E80BA031DAF0}</Project>
+    </ProjectReference>
   </ItemGroup>
 </Project>
