--- a/frontend/Lumi/package.json
+++ b/frontend/Lumi/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@react-native-community/voice": "^1.1.9",
+    "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "axios": "^1.6.0",
@@ -52,5 +53,9 @@
   },
   "engines": {
     "node": ">=16"
+  },
+  "resolutions": {
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.2"
   }
 }
