--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,5 @@
-notes
-
+token.pickle
 .venv
-.vs
-
-imgui-frontend/out/
-imgui-frontend/out/
-
-backend/__pycache__/
-
-frontend/Lumi/__tests__/
-frontend/Lumi/.bundle/
-frontend/Lumi/android/*
-frontend/Lumi/ios/*
-frontend/Lumi/windows/Lumi/BundleBuilder/
-frontend/Lumi/windows/Lumi/Generated Files/
-frontend/Lumi/windows/Lumi/*.cpp
-frontend/Lumi/windows/Lumi/*.h
-frontend/Lumi/windows/Lumi/x64/
-frontend/Lumi/windows/x64/
-frontend/Lumi/macos/*
-frontend/Lumi/node_modules/
-frontend/Lumi/npm-debug.log/
-frontend/Lumi/yarn-error.log/
-
-testing/
+*/__pycache__
+__pycache__
+credentials.json
